add crossbrowser changes to css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- get Handlebars -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <!-- connect to css file -->
-    <link rel="stylesheet" href="css/twitchTVFlex.css">
+    <link rel="stylesheet" href="css/twitchTVFlexCrossBrowser.css">
     <!-- connect to javascript file -->
     <script src="js/twitchTV.js" async defer></script>
     <!-- open links (<a>) in new tabs -->
